Footer, background and title.
Added the footer with socials icons, animated background and interactable title.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <script src="https://kit.fontawesome.com/54a9bbcde0.js" crossorigin="anonymous"></script>
   <title>J-ak-e</title>
 </head>
 <body>
-  <h1>Hello</h1>
-
-  <p>Welcome</p>
+  <h1><p>J-ak-e</p></h1>
+  <footer>
+    <span class="social" name="youtube" onclick="redirect(this)"><i class="fa-brands fa-youtube"></i></span>
+    <span class="social" name="github" onclick="redirect(this)"><i class="fa-brands fa-github"></i></span>
+    <span class="social" name="instagram" onclick="redirect(this)"><i class="fa-brands fa-instagram"></i></span>
+    <span class="social" name="tiktok" onclick="redirect(this)"><i class="fa-brands fa-tiktok"></i></span>
+    <span class="social" name="spotify" onclick="redirect(this)"><i class="fa-brands fa-spotify"></i></span>
+    <span class="social" name="discord" onclick="redirect(this)"><i class="fa-brands fa-discord"></i></span>
+    <span class="social" name="twitter" onclick="redirect(this)"><i class="fa-brands fa-twitter"></i></span>
+    <span class="social" name="paypal" onclick="redirect(this)"><i class="fa-brands fa-paypal"></i></span>
+    <span class="social" name="twitch" onclick="redirect(this)"><i class="fa-brands fa-twitch"></i></span>
+  </footer>
+  <script src="logic.js"></script>
 </body>
 </html>
