Made icons bigger, switched to hyperlink tags

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
   <h1><p>J-ak-e</p></h1>
   <footer>
-    <span class="social" name="youtube" onclick="redirect(this)"><i class="fa-brands fa-youtube"></i></span>
-    <span class="social" name="github" onclick="redirect(this)"><i class="fa-brands fa-github"></i></span>
-    <span class="social" name="instagram" onclick="redirect(this)"><i class="fa-brands fa-instagram"></i></span>
-    <span class="social" name="tiktok" onclick="redirect(this)"><i class="fa-brands fa-tiktok"></i></span>
-    <span class="social" name="spotify" onclick="redirect(this)"><i class="fa-brands fa-spotify"></i></span>
-    <span class="social" name="discord" onclick="redirect(this)"><i class="fa-brands fa-discord"></i></span>
-    <span class="social" name="twitter" onclick="redirect(this)"><i class="fa-brands fa-twitter"></i></span>
-    <span class="social" name="paypal" onclick="redirect(this)"><i class="fa-brands fa-paypal"></i></span>
-    <span class="social" name="twitch" onclick="redirect(this)"><i class="fa-brands fa-twitch"></i></span>
+    <span class="social" name="youtube"><a href="https://youtube.com/@IdfkJake" target="_blank"><i class="fa-brands fa-youtube"></i></a></span>
+    <span class="social" name="github"><a href="https://github.com/J-ak-e" target="_blank"><i class="fa-brands fa-github"></i></a></span>
+    <span class="social" name="instagram"><a href="https://instagram.com/idfk.jake" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
+    <span class="social" name="tiktok"><a href="https://tiktok.com/@idfk_jake" target="_blank"><i class="fa-brands fa-tiktok"></i></a></span>
+    <span class="social" name="spotify"><a href="https://open.spotify.com/track/4yr5aCDFyAyFmdxNQerppi?si=894555ce18994938" target="_blank"><i class="fa-brands fa-spotify"></i></a></span>
+    <span class="social" name="discord"><a href="https://discord.gg/gx33kv2rtJ" target="_blank"><i class="fa-brands fa-discord"></i></a></span>
+    <span class="social" name="twitter"><a href="https://twitter.com/JakeLilOrions" target="_blank"><i class="fa-brands fa-twitter"></i></a></span>
+    <span class="social" name="paypal"><a href="https://paypal.me/JakeTheChad" target="_blank"><i class="fa-brands fa-paypal"></i></a></span>
+    <span class="social" name="twitch"><a href="https://www.twitch.tv/idfk_jake" target="_blank"><i class="fa-brands fa-twitch"></i></a></span>
   </footer>
   <script src="logic.js"></script>
 </body>
