New GitHub Username

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta http-equiv='pragma' content='no-cache'>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="https://kit.fontawesome.com/54a9bbcde0.js" crossorigin="anonymous"></script>
-  <title>J-ak-e</title>
+  <title>PublicJake</title>
 </head>
 <body>
-  <h1><p>J-ak-e</p></h1>
+  <h1><p>PublicJake</p></h1>
   <footer>
     <span class="social" name="youtube"><a href="https://youtube.com/@IdfkJake" target="_blank"><i class="fa-brands fa-youtube"></i></a></span>
-    <span class="social" name="github"><a href="https://github.com/J-ak-e" target="_blank"><i class="fa-brands fa-github"></i></a></span>
+    <span class="social" name="github"><a href="https://github.com/PublicJake" target="_blank"><i class="fa-brands fa-github"></i></a></span>
     <span class="social" name="instagram"><a href="https://instagram.com/idfk.jake" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
     <span class="social" name="tiktok"><a href="https://tiktok.com/@idfk_jake" target="_blank"><i class="fa-brands fa-tiktok"></i></a></span>
     <span class="social" name="spotify"><a href="https://open.spotify.com/track/4yr5aCDFyAyFmdxNQerppi?si=894555ce18994938" target="_blank"><i class="fa-brands fa-spotify"></i></a></span>
