Re-made the whole website
Added cards with info, footer with buttons, changes color scheme (might change in the future).

--- a/index.html
+++ b/index.html
@@ -8,21 +8,56 @@
   <meta http-equiv='pragma' content='no-cache'>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="https://kit.fontawesome.com/54a9bbcde0.js" crossorigin="anonymous"></script>
-  <title>PublicJake</title>
+  <script src="logic.js"> </script>
+  <title>Jake</title>
 </head>
 <body>
-  <h1><p>PublicJake</p></h1>
+  <header>
+    <h1>Jake</h1>
+  </header>
+  <section class="page">
+    <section class="pre">
+      <h3></h3>
+    </section> 
+    <section class="main">
+      <div class="cards-container">
+        <h3 class="cards-header">About me</h3>
+        <div class="cards">
+          <div class="card">
+            <div class="card-gradient">
+              <i class="fa-solid fa-code-branch"></i>
+              <h4>I use Java, Python, JavaScript, Skript, HTML and CSS</h4>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-gradient">
+              <i class="fa-solid fa-chess-knight"></i>
+              <h4>I preach hard work and discipline</h4>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-gradient">
+              <i class="fa-solid fa-dumbbell"></i>
+              <h4>I love working out</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </section>
   <footer>
-    <span class="social" name="youtube"><a href="https://youtube.com/@IdfkJake" target="_blank"><i class="fa-brands fa-youtube"></i></a></span>
-    <span class="social" name="github"><a href="https://github.com/PublicJake" target="_blank"><i class="fa-brands fa-github"></i></a></span>
-    <span class="social" name="instagram"><a href="https://instagram.com/idfk.jake" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
-    <span class="social" name="tiktok"><a href="https://tiktok.com/@idfk_jake" target="_blank"><i class="fa-brands fa-tiktok"></i></a></span>
-    <span class="social" name="spotify"><a href="https://open.spotify.com/track/4yr5aCDFyAyFmdxNQerppi?si=894555ce18994938" target="_blank"><i class="fa-brands fa-spotify"></i></a></span>
-    <span class="social" name="discord"><a href="https://discord.gg/gx33kv2rtJ" target="_blank"><i class="fa-brands fa-discord"></i></a></span>
-    <span class="social" name="twitter"><a href="https://twitter.com/JakeLilOrions" target="_blank"><i class="fa-brands fa-twitter"></i></a></span>
-    <span class="social" name="paypal"><a href="https://paypal.me/JakeTheChad" target="_blank"><i class="fa-brands fa-paypal"></i></a></span>
-    <span class="social" name="twitch"><a href="https://www.twitch.tv/idfk_jake" target="_blank"><i class="fa-brands fa-twitch"></i></a></span>
+    <section class="socials">
+      <a class="social" href="https://youtube.com/@IdfkJake" target="_blank"><i class="fa-brands fa-youtube social-icon"></i></a>
+      <a class="social" href="https://github.com/PublicJake" target="_blank"><i class="fa-brands fa-github social-icon"></i></a>
+      <a class="social" href="https://instagram.com/idfk.jake" target="_blank"><i class="fa-brands fa-instagram social-icon"></i></a>
+      <a class="social" href="https://tiktok.com/@idfk_jake" target="_blank"><i class="fa-brands fa-tiktok social-icon"></i></a>
+      <a class="social" href="https://open.spotify.com/track/4yr5aCDFyAyFmdxNQerppi?si=894555ce18994938" target="_blank"><i class="fa-brands fa-spotify social-icon"></i></a>
+      <a class="social" href="https://discordapp.com/users/842074156405358652" target="_blank"><i class="fa-brands fa-discord social-icon"></i></a>
+      <a class="social" href="https://x.com/JakeLilOrions" target="_blank"><i class="fa-brands fa-twitter social-icon"></i></a>
+      <a class="social" href="https://paypal.me/JakeTheChad" target="_blank"><i class="fa-brands fa-paypal social-icon"></i></a>
+      <a class="social" href="https://www.twitch.tv/idfk_jake" target="_blank"><i class="fa-brands fa-twitch social-icon"></i></a>
+      <a class="social" href="mailto:jake.gblp@gmail.com" target="_blank"><i class="fa-regular fa-envelope social-icon"></i></a>
+    </section>
   </footer>
-  <script src="logic.js"></script>
 </body>
 </html>
