--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <meta http-equiv='pragma' content='no-cache'>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="https://kit.fontawesome.com/54a9bbcde0.js" crossorigin="anonymous"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3436496870462059"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3436496870462059" crossorigin="anonymous"></script>
   <script src="logic.js"> </script>
   <title>Jake</title>
 </head>
