--- a/index.html
+++ b/index.html
@@ -8,57 +8,48 @@
   <meta http-equiv='pragma' content='no-cache'>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="https://kit.fontawesome.com/54a9bbcde0.js" crossorigin="anonymous"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3436496870462059" crossorigin="anonymous"></script>
-  <script src="logic.js"> </script>
+  <script src="import.js" file="_static/logo.html" parent-id="logo"></script>
   <title>Jake</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
 <body>
   <header>
-    <h1>Jake</h1>
+    <section id="sky">
+    </section>
+    <span id="logo">
+      <h2 class="title">Jake</h2>
+    </span>
+    <section class="sub-header">
+      <h2 class="title">Jake</h2>
+      <h6 class="subtitle"></h6>
+    </section>
+    <section class="header-buttons">
+      <a href="https://www.tiktok.com/@jakegblp" title="TikTok">
+        <i class="fa-brands fa-tiktok"></i>
+      </a>
+      <a href="https://github.com/PublicJake" title="GitHub">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a href="https://paypal.me/JakeTheChad" title="PayPal Me">
+        <i class="fa-brands fa-paypal"></i>
+      </a>
+      <a href="https://www.youtube.com/channel/UCKHczfj99cDvZ5EpGQYyL2A" title="Youtube">
+        <i class="fa-brands fa-youtube"></i>
+      </a>
+      <a href="https://twitter.com/JakeGBLP" title="𝕏">
+        <i class="fa-brands fa-x-twitter"></i>
+      </a>
+      <a href="https://www.instagram.com/jakegblp/" title="Instagram">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="https://www.twitch.tv/jakegblp" title="Twitch">
+        <i class="fa-brands fa-twitch"></i>
+      </a>
+      <a href="mailto:jake.gblp@gmail.com" title="Email Me">
+        <i class="fa-regular fa-envelope"></i>
+      </a>
+    </section>
   </header>
-  <section class="page">
-    <section class="pre">
-      <h3></h3>
-    </section> 
-    <section class="main">
-      <div class="cards-container">
-        <h3 class="cards-header">About me</h3>
-        <div class="cards">
-          <div class="card">
-            <div class="card-gradient">
-              <i class="fa-solid fa-code-branch"></i>
-              <h4>I use Java, Python, JavaScript, Skript, HTML and CSS</h4>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-gradient">
-              <i class="fa-solid fa-chess-knight"></i>
-              <h4>I preach hard work and discipline</h4>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-gradient">
-              <i class="fa-solid fa-dumbbell"></i>
-              <h4>I love working out</h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </section>
-  <footer>
-    <section class="socials">
-      <a class="social" href="https://youtube.com/@IdfkJake" target="_blank"><i class="fa-brands fa-youtube social-icon"></i></a>
-      <a class="social" href="https://github.com/PublicJake" target="_blank"><i class="fa-brands fa-github social-icon"></i></a>
-      <a class="social" href="https://instagram.com/idfk.jake" target="_blank"><i class="fa-brands fa-instagram social-icon"></i></a>
-      <a class="social" href="https://tiktok.com/@idfk_jake" target="_blank"><i class="fa-brands fa-tiktok social-icon"></i></a>
-      <a class="social" href="https://open.spotify.com/track/4yr5aCDFyAyFmdxNQerppi?si=894555ce18994938" target="_blank"><i class="fa-brands fa-spotify social-icon"></i></a>
-      <a class="social" href="https://discordapp.com/users/842074156405358652" target="_blank"><i class="fa-brands fa-discord social-icon"></i></a>
-      <a class="social" href="https://x.com/JakeLilOrions" target="_blank"><i class="fa-brands fa-twitter social-icon"></i></a>
-      <a class="social" href="https://paypal.me/JakeTheChad" target="_blank"><i class="fa-brands fa-paypal social-icon"></i></a>
-      <a class="social" href="https://www.twitch.tv/idfk_jake" target="_blank"><i class="fa-brands fa-twitch social-icon"></i></a>
-      <a class="social" href="mailto:jake.gblp@gmail.com" target="_blank"><i class="fa-regular fa-envelope social-icon"></i></a>
-    </section>
-  </footer>
+  <script src="logic.js"> </script>
 </body>
 </html>
