--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="https://kit.fontawesome.com/54a9bbcde0.js" crossorigin="anonymous"></script>
-  <script src="import.js" file="_static/logo.html" parent-id="logo"></script>
+  <script src="import.js" file="static/logo.html" parent-id="logo"></script>
   <title>Jake</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
