--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="https://www.tiktok.com/@jakegblp" title="TikTok">
         <i class="fa-brands fa-tiktok"></i>
       </a>
-      <a href="https://github.com/PublicJake" title="GitHub">
+      <a href="https://github.com/JakeGBLP" title="GitHub">
         <i class="fa-brands fa-github"></i>
       </a>
       <a href="https://paypal.me/JakeTheChad" title="PayPal Me">
