--- a/skript/nbt-epidemic/index.html
+++ b/skript/nbt-epidemic/index.html
@@ -8,7 +8,7 @@
     <meta property="og:site_name" content="JakeGBLP's Custom Pages"> <!-- This sets the text above the title -->
     <meta property="og:title" content="NBT Epidemic">
     <meta property="og:description" content="If someone sent this to you then you really need to give this a read.">
-    <meta property="og:image" content="https://preview.redd.it/collection-of-these-hands-over-mouth-image-v0-n62ffrkx78je1.jpeg"> <!-- Replace with your desired image -->
+    <meta property="og:image" content="goku holding hand over girl's mouth.webp"> <!-- Replace with your desired image -->
     <meta property="og:url" content="https://jakegblp.github.io/skript/nbt-epidemic">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#7640ff">
