fixed image link

--- a/skript/nbt-epidemic/index.html
+++ b/skript/nbt-epidemic/index.html
@@ -5,10 +5,10 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>NBT Epidemic</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
-    <meta property="og:site_name" content="JakeGBLP's Custom Pages"> <!-- This sets the text above the title -->
+    <meta property="og:site_name" content="JakeGBLP's Custom Pages">
     <meta property="og:title" content="NBT Epidemic">
     <meta property="og:description" content="If someone sent this to you then you really need to give this a read.">
-    <meta property="og:image" content="goku holding hand over girl's mouth.webp"> <!-- Replace with your desired image -->
+    <meta property="og:image" content="https://jakegblp.github.io/skript/nbt-epidemic/goku%20holding%20hand%20over%20girl's%20mouth.webp">
     <meta property="og:url" content="https://jakegblp.github.io/skript/nbt-epidemic">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#7640ff">
