Changed website description

--- a/skript/nbt-epidemic/index.html
+++ b/skript/nbt-epidemic/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
     <meta property="og:site_name" content="JakeGBLP's Custom Pages">
     <meta property="og:title" content="NBT Epidemic">
-    <meta property="og:description" content="If someone sent this to you then you really need to give this a read.">
+    <meta property="og:description" content="If someone sent this to you that means you are abusing NBT. Please please please read this page, open your eyes, and look at what you did.">
     <meta property="og:image" content="https://jakegblp.github.io/skript/nbt-epidemic/goku%20holding%20hand%20over%20girl's%20mouth.webp">
     <meta property="og:url" content="https://jakegblp.github.io/skript/nbt-epidemic">
     <meta property="og:type" content="website">
